                            will have names like stem_name_nnn.flt
          input_file      - Is the input file to split.
       - Changed swrite format level to 3: Make NSCLAsciiFormatter able to read:
         rev 2,1 and even 2 where summary spectra only have 1 coord.
       - Fix some issues with Gamma Delux 2d spectrum classes that don't compile
         on 4.x compilers
       - get NSCLAsciiFormatter to properly read rev 2,3 and 'malformed rev2'
         produced by the pre2 version of 3.2.
       - Make the spectrum file read functions able to correctly report errors in
         reads (e.g. not a spectrum file).
Week of May 14, 2007
       - BZ 297 - Make axis tick marks draw correctly if there's only one channel in 
        the spectrum (well really just don't draw tick marks at all.
       - Add code to support gate observers.. for new displayer.
       - Add -trace subcommand to gate.
       - Fix error in TreeParameter/SpectrumGenerator.tcl -state normal not
          -state enabled.
       - Fix error in TreeParameter/SpectrumGenerator.tcl - Duplicate button
         did not correctly decode parameters of spectrum being duplicated.
       - Add docs for the gate -trace subcommand to the web docs.
       - Fix CNSCLJumboBuffer::size32() member, was not correctly picking up 
         the buffer revision level.
Week of May 24, 2007
       - Only clear gates that are worth clearing.
Week of May 28,l 2007
       - Fix channel position to pixel position coversions which had
         the width of a channel to be too large (too few channels in displayed
         range.
       - Do some jiggerypokery with 1-d gates to make them more consistent with
         their integration:
         o On acceptance the right point is adjusted to the right by a channel.
         o Gate checking is now exclusive of the right point.
         o On entering in the display the adjustment is un-done so that
           Xamine will display correctly.